signed logsumexp function

--- a/debug/logsumexp.ipynb
+++ b/debug/logsumexp.ipynb
@@ -1441,6 +1441,89 @@
     "print(f'stable_mean')\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "def logsumexp_with_sign(a, b, dim=-1, keepdim=False, eps=1e-40):\n",
+    "    \"\"\"\n",
+    "    Stable log|Σ b·exp(a)|   and   sign(Σ b·exp(a))\n",
+    "    ------------------------------------------------\n",
+    "    a   : tensor – the log-terms (ℓ_j)\n",
+    "    b   : tensor – the weights   (b_j)  (can be ±)\n",
+    "          `a` and `b` must be broadcast–compatible.\n",
+    "    dim : dimension over which to sum\n",
+    "    \"\"\"\n",
+    "    a_max = torch.max(a, dim=dim, keepdim=True)[0]           # shift\n",
+    "    scaled = b * torch.exp(a - a_max)                        # weights in safe range\n",
+    "    s      = scaled.sum(dim=dim, keepdim=keepdim)            # may be ±\n",
+    "    sign   = torch.sign(s).detach()                          # ±1 (detach ⇢ no grad through sign)\n",
+    "    logabs = torch.log(torch.abs(s) + eps) + a_max.squeeze(dim) \\\n",
+    "             if not keepdim else torch.log(torch.abs(s) + eps) + a_max\n",
+    "    return logabs, sign\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 2, 2])\n",
+      "tensor([[[ 0.0134, -0.0562],\n",
+      "         [-0.0133, -0.0967]],\n",
+      "\n",
+      "        [[-0.4408, -0.0948],\n",
+      "         [-0.1220,  0.1229]],\n",
+      "\n",
+      "        [[ 0.3199,  0.0264],\n",
+      "         [ 0.4811, -0.2101]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- dummy data for demonstration ---\n",
+    "K          = 5                          # number of graph samples\n",
+    "flat_dim   = 12                         # d*k*2  after you reshape\n",
+    "\n",
+    "torch.manual_seed(0)\n",
+    "grad_z     = torch.randn(flat_dim, K)   # [flat_dim, K]  each row = score_row\n",
+    "log_lik    = torch.randn(K) * -2.0      # [K]\n",
+    "\n",
+    "# --- denominator: plain logsumexp because weights are +1 ---\n",
+    "log_den    = torch.logsumexp(log_lik, dim=0)          # scalar  log D\n",
+    "\n",
+    "# --- numerator: row-wise signed logsumexp ---\n",
+    "log_num, sign_num = [], []\n",
+    "for r in range(flat_dim):\n",
+    "    ln, sg = logsumexp_with_sign(grad_z[r], log_lik)\n",
+    "    log_num.append(ln)\n",
+    "    sign_num.append(sg)\n",
+    "\n",
+    "log_num = torch.stack(log_num)    # [flat_dim]\n",
+    "sign_num= torch.stack(sign_num)   # [flat_dim]  (+1/-1/0)\n",
+    "print(f'log_num: {log_num}')\n",
+    "print(f'sign_num: {sign_num}')\n",
+    "print(f'grad_z: {grad_z}')\n",
+    "\n",
+    "# --- weighted average  N/D  (still on-graph wrt log_lik and grad_z) ---\n",
+    "weighted_score_flat = sign_num * torch.exp(log_num - log_den)   # [flat_dim]\n",
+    "\n",
+    "# reshape back to [d, k, 2] if you like\n",
+    "d, k = 3, 2\n",
+    "weighted_score = weighted_score_flat.view(d, k, 2)\n",
+    "\n",
+    "print(weighted_score.shape)   # torch.Size([3, 2, 2])\n",
+    "print(weighted_score)\n"
+   ]
   }
  ],
  "metadata": {
