added the missing -logM for the estimator

--- a/debug/logsumexp.ipynb
+++ b/debug/logsumexp.ipynb
@@ -1582,42 +1582,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_pos: 17, n_neg: 33\n",
-      "log_grads_abs: tensor([ 2.9957,  2.9646,  2.9326,  2.8994,  2.8651,  2.8296,  2.7928,  2.7546,\n",
-      "         2.7148,  2.6734,  2.6303,  2.5852,  2.5379,  2.4883,  2.4361,  2.3811,\n",
-      "         2.3228,  2.2609,  2.1950,  2.1243,  2.0484,  1.9661,  1.8765,  1.7781,\n",
-      "         1.6689,  1.5463,  1.4065,  1.2440,  1.0498,  0.8087,  0.4902,  0.0202,\n",
-      "        -0.8961, -1.5892, -0.2029,  0.3567,  0.7133,  0.9757,  1.1834,  1.3552,\n",
-      "         1.5018,  1.6296,  1.7430,  1.8448,  1.9371,  2.0217,  2.0996,  2.1720,\n",
-      "         2.2394,  2.3026])\n",
-      "log_grads_abs_pos: tensor([   -inf,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,\n",
-      "           -inf,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,\n",
-      "           -inf,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,\n",
-      "           -inf,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,\n",
-      "           -inf, -1.5892, -0.2029,  0.3567,  0.7133,  0.9757,  1.1834,  1.3552,\n",
-      "         1.5018,  1.6296,  1.7430,  1.8448,  1.9371,  2.0217,  2.0996,  2.1720,\n",
-      "         2.2394,  2.3026])\n",
-      "log_grads_abs_neg: tensor([ 2.9957,  2.9646,  2.9326,  2.8994,  2.8651,  2.8296,  2.7928,  2.7546,\n",
-      "         2.7148,  2.6734,  2.6303,  2.5852,  2.5379,  2.4883,  2.4361,  2.3811,\n",
-      "         2.3228,  2.2609,  2.1950,  2.1243,  2.0484,  1.9661,  1.8765,  1.7781,\n",
-      "         1.6689,  1.5463,  1.4065,  1.2440,  1.0498,  0.8087,  0.4902,  0.0202,\n",
-      "        -0.8961,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,\n",
-      "           -inf,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,    -inf,\n",
-      "           -inf,    -inf])\n",
-      "log_numerator_positive: 1.6296405792236328\n",
-      "log_numerator_negative: 2.322787284851074\n",
+      "n_pos: 37, n_neg: 13\n",
+      "log_grads_abs: tensor([ -982.2874, -1000.7169, -1019.6636,  -992.2940, -1008.9379, -1012.2079,\n",
+      "         -994.3369,  -990.1645, -1005.9486, -1003.0577, -1005.3584,  -998.1594,\n",
+      "        -1010.1560,  -989.4846, -1010.3552,  -997.9644, -1004.5443,  -994.9136,\n",
+      "        -1007.3737, -1013.3845,  -994.4514,  -983.4689,  -988.5276,  -990.0796,\n",
+      "         -995.8204,  -985.0195, -1010.4863, -1005.4227,  -997.6549, -1004.5693,\n",
+      "         -992.1402, -1010.3970,  -995.2999,  -991.7427, -1019.3112,  -994.4885,\n",
+      "        -1007.3323, -1002.0017,  -994.2208, -1006.0974,  -997.2839,  -993.9631,\n",
+      "         -996.8855, -1005.9220, -1007.6309,  -999.3800,  -994.7897,  -998.8450,\n",
+      "         -976.0505,  -996.9531])\n",
+      "log_grads_abs_pos: tensor([      -inf,       -inf,       -inf,       -inf,       -inf,       -inf,\n",
+      "              -inf,       -inf,       -inf,       -inf,       -inf,       -inf,\n",
+      "              -inf,  -989.4846, -1010.3552,  -997.9644, -1004.5443,  -994.9136,\n",
+      "        -1007.3737, -1013.3845,  -994.4514,  -983.4689,  -988.5276,  -990.0796,\n",
+      "         -995.8204,  -985.0195, -1010.4863, -1005.4227,  -997.6549, -1004.5693,\n",
+      "         -992.1402, -1010.3970,  -995.2999,  -991.7427, -1019.3112,  -994.4885,\n",
+      "        -1007.3323, -1002.0017,  -994.2208, -1006.0974,  -997.2839,  -993.9631,\n",
+      "         -996.8855, -1005.9220, -1007.6309,  -999.3800,  -994.7897,  -998.8450,\n",
+      "         -976.0505,  -996.9531])\n",
+      "log_grads_abs_neg: tensor([ -982.2874, -1000.7169, -1019.6636,  -992.2940, -1008.9379, -1012.2079,\n",
+      "         -994.3369,  -990.1645, -1005.9486, -1003.0577, -1005.3584,  -998.1594,\n",
+      "        -1010.1560,       -inf,       -inf,       -inf,       -inf,       -inf,\n",
+      "              -inf,       -inf,       -inf,       -inf,       -inf,       -inf,\n",
+      "              -inf,       -inf,       -inf,       -inf,       -inf,       -inf,\n",
+      "              -inf,       -inf,       -inf,       -inf,       -inf,       -inf,\n",
+      "              -inf,       -inf,       -inf,       -inf,       -inf,       -inf,\n",
+      "              -inf,       -inf,       -inf,       -inf,       -inf,       -inf,\n",
+      "              -inf,       -inf])\n",
+      "log_numerator_positive: -979.66064453125\n",
+      "log_numerator_negative: -984.8519287109375\n",
       "log_den: -983.3275756835938\n",
       "log_den_shifted: -983.3275146484375\n",
       "log_den_shifted_exp: 0.0\n",
-      "final_grad: nan\n",
-      "final_grad_shifted: nan\n"
+      "final_grad: 38.91387176513672\n",
+      "final_grad_shifted: 38.9114990234375\n"
      ]
     }
    ],
@@ -1711,7 +1717,7 @@
     "num_samples = 50\n",
     "\n",
     "# Create grad samples with net positive mean\n",
-    "grad_samples = [x.clone().detach() for x in torch.linspace(-20, 10, num_samples)]  # More positive values than negative\n",
+    "grad_samples = [x.clone().detach() for x in torch.linspace(-10, 30, num_samples)]  # More positive values than negative\n",
     "\n",
     "# Create log density samples from N(-1000, 100)\n",
     "log_density_samples = [torch.normal(mean=-1000.0, std=10.0, size=()) for _ in range(num_samples)]\n",
@@ -2104,10 +2110,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result shape: torch.Size([3, 3])\n",
+      "result: tensor([[-0.2136, -1.0115,  0.3876],\n",
+      "        [ 0.3440, -0.7683, -1.2314],\n",
+      "        [ 0.1183,  0.4459,  1.5230]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "def stable_ratio(grad_samples, log_density_samples):\n",
+    "    eps = 1e-30\n",
+    "    S   = len(log_density_samples)                    # == M\n",
+    "\n",
+    "    log_p   = torch.stack(log_density_samples)        # [S]\n",
+    "    grads   = torch.stack(grad_samples)               # [S,*]\n",
+    "\n",
+    "    while log_p.dim() < grads.dim():\n",
+    "        log_p = log_p.unsqueeze(-1)\n",
+    "\n",
+    "    log_den = torch.logsumexp(log_p, dim=0) - torch.log(torch.tensor(len(log_p), dtype=log_p.dtype, device=log_p.device))\n",
+    "\n",
+    "    pos = grads >= 0\n",
+    "    neg = ~pos\n",
+    "\n",
+    "    log_num_pos = torch.logsumexp(\n",
+    "        torch.where(pos,\n",
+    "                    torch.log(grads.abs() + eps) + log_p,\n",
+    "                    torch.full_like(log_p, -float('inf'))),\n",
+    "        dim=0) - torch.log(torch.tensor(len(log_p), dtype=log_p.dtype, device=log_p.device))\n",
+    "\n",
+    "    log_num_neg = torch.logsumexp(\n",
+    "        torch.where(neg,\n",
+    "                    torch.log(grads.abs() + eps) + log_p,\n",
+    "                    torch.full_like(log_p, -float('inf'))),\n",
+    "        dim=0) - torch.log(torch.tensor(len(log_p), dtype=log_p.dtype, device=log_p.device))\n",
+    "\n",
+    "    return torch.exp(log_num_pos - log_den) - torch.exp(log_num_neg - log_den)\n",
+    "\n",
+    "\n",
+    "# mock data with log dnesity shape (50,)\n",
+    "# grad of theta is shape (50, 3, 3)\n",
+    "\n",
+    "n_samples = 50\n",
+    "log_density_samples = [torch.normal(mean=-1000.0, std=100.0, size=()) for _ in range(n_samples)]  # 50 scalars\n",
+    "grad_samples = [torch.normal(mean=0.2, std=1, size=(3, 3)) for _ in range(n_samples)]  # 50 (3,3) tensors\n",
+    "\n",
+    "result = stable_ratio(grad_samples, log_density_samples)\n",
+    "print(f'result shape: {result.shape}')  # Should be (3, 3)\n",
+    "print(f'result: {result}')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
